# settlers_of_catan

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  notes.txt  settlers_of_catan
lib/: stb_truetype.h
project/: Untitled Diagram.xml  gantt_diagram.xml  notes.txt
source/: game.cpp  game.h  socatan.cpp  socatan.cpp~  socatan.h  socatan_debug.h  socatan_input.h  socatan_math.cpp  socatan_math.h  socatan_memory.cpp  socatan_memory.h  socatan_opengl.cpp  socatan_opengl.h  socatan_opengl.h~  socatan_platform.cpp  socatan_platform.h  socatan_render.cpp  socatan_render.cpp~  socatan_render.h  socatan_render.h~  socatan_types.h  socatan_util.h  types.h  util.h
source/platform/: linux.cpp  linux_main.cpp  linux_socatan_main.cpp  linux_socatan_main.cpp~
